# r34-agent

./: .gitignore  README.md  deploy.sh  docker-compose.yml  haproxy.cfg  package-lock.json  package.json  pyproject.toml  turbo.json
.cursor/rules/: product.mdc
agents/rule34/: config.ts  rule34-text-graph.ts
agents/rule34/nodes/: evaluate-content-preservation.ts  evaluate-horniness.ts  evaluate-kink-inclusion.ts  evaluate-structure-preservation.ts  evaluation-utils.ts  fetish-inference.ts  generate-rule34-text.ts
agents/rule34/prompts/: evaluate-content-preservation.ts  evaluate-kink-inclusion.ts  fetish-inference.ts  rule34-text-generation.ts
app/: layout.tsx  page.tsx
app/api/: route.ts
app/api/feedback/: route.ts
app/api/graph/: route.ts
app/donate/: page.tsx
apps/agent/: Dockerfile  README.md  config.ts  index.ts  package.json  rule34-text-graph.ts  server.ts  tsconfig.json  venice.types.ts
apps/agent/nodes/: evaluate-content-preservation.ts  evaluate-kink-inclusion.ts  evaluate-structure-preservation.ts  evaluation-utils.ts  fetish-inference.ts  generate-rule34-text.ts
apps/agent/prompts/: evaluate-horniness.ts  evaluate-structure-presentation.ts
apps/frontend/: .gitignore  next.config.ts  package.json  tsconfig.json
archive/: final-analysis.ts  generate-final-analysis.ts  rule34-text-generation_first-grok-pass.ts  rule34-text-generation_original-text.ts
components/: feedback-card.tsx  navbar.tsx  session-provider.tsx
components/ui/: form.tsx
rule34-uagent/: README.md  agent.py
scripts/: run-venice-graph.ts  test-graph.ts
(+13 files in other folders)
