[project]
name = "rule34-uagent"
version = "0.1.0"
description = "A uagent client for the rule34-agent API"
authors = [
    {name = "neilei",email = "217259707+neilei@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "uagents[cli] (>=0.22.5,<0.23.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.104.0,<1.0.0)",
    "uvicorn (>=0.24.0,<1.0.0)",
    "aiohttp (>=3.9.5,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
